# Hackintosh-Hardware-detector

./: .gitignore  README.md  hackintosh-detector.ps1  kext.json  pyproject.toml
.github/workflows/: release.yml
src/hhd/: catalog.py  cli.py  download.py
src/hhd/detect/: __init__.py  macos.py  windows.py
